# algotrade-py

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  security.yml
algotrade/: __init__.py  constants.py  contracts.py  scheduler.py  schedules.py  settings.py  treasury.py  tv.py
algotrade/api/: app.py  scheduler.py  schema.py
algotrade/barsmith_parity/: __init__.py  check_barsmith_indicator_parity.py
algotrade/cli/: __init__.py  main.py
algotrade/core/: brokers.py  engine.py  indicators.py  interfaces.py  market_ohlc_duckdb.py  nz.py  repository.py  safety.py  types.py  utils.py
algotrade/models/: barsmith_combo_2x_atr_tp_atr_stop.py  tribar_momentum.py  tribar_v2.py
docs/: architecture.md  config.md  quickstart.md  runbook.md  security.md
experiments/: __init__.py
experiments/analysis/: __init__.py  daily_up_and_reverse.py  entry_rotation.py  forward_robustness.py  monte_carlo.py  tribar_ai.py  two_wave_indicator.py
tests/: conftest.py  test_barsmith_main_schedule.py  test_nz_utils.py
tests/analysis/: test_backadjust_databento.py  test_entry_rotation.py  test_forward_robustness.py
tests/core/: test_broker.py  test_ibkr_broker_connect.py  test_safety.py  test_utils.py
tests/models/: test_barsmith_combo_2x_atr_tp_atr_stop.py  test_barsmith_combo_2x_atr_tp_atr_stop_live_order_submission.py  test_barsmith_combo_2x_atr_tp_atr_stop_scan_realized.py  test_barsmith_combo_2x_atr_tp_atr_stop_tv_required_bars.py  test_market_ohlc_duckdb_cache.py
tests/scripts/: test_barsmith_combo_required_tv_bars.py  test_check_barsmith_indicator_parity_2x_atr_tp_atr_stop.py  test_check_barsmith_indicator_parity_atr_tp_atr_stop.py  test_check_barsmith_indicator_parity_highlow_1r.py  test_check_barsmith_indicator_parity_highlow_or_atr.py  test_check_barsmith_indicator_parity_highlow_or_atr_tightest_stop.py  test_check_barsmith_indicator_parity_highlow_sl_1x_atr_tp_rr_gt_1.py  test_eval_barsmith_kinetic_combos_buy_and_hold.py  (+5 more)
tools/: backadjust_databento.py  check_barsmith_indicator_parity.py  eval_barsmith_kinetic_combos.py
(+5 files in other folders)
